# hydra-auto-schema

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: build.yaml  publish.yaml
docs/reference/: hydra_auto_schema.md
hydra_auto_schema/: __init__.py  __main__.py  auto_schema.py  auto_schema_plugin.py  auto_schema_test.py  customize.py  filewatcher.py  filewatcher_test.py  utils.py
hydra_auto_schema/auto_schema_test/: nested.yaml  partial.yaml  with_defaults.yaml  with_package_global.yaml  with_target.yaml
hydra_plugins/auto_schema/: auto_schema_plugin.py
tests/: auto_schema_test.py  cli_test.py  customize_test.py  integration_test.py
tests/configs/: nested.yaml  partial.yaml  with_defaults.json  with_defaults.yaml  with_package_global.yaml  with_structured_default.json  with_structured_default.yaml  with_target.yaml
tests/customize_test/: test_use_custom_enum_handler.json
tests/structured_app/: __init__.py  app.py  app_test.py  structured_app_test.py
tests/structured_app/conf/: __init__.py  config.yaml
tests/structured_app/conf/db/: mysql.yaml  postgresql.yaml
tests/structured_app/schemas/: conf_config_schema.json  db_mysql_schema.json  db_postgresql_schema.json
